--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -612,6 +612,8 @@ Cascade.TimeStamp=2017.07.12-05.20.23
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2017.07.12-05.20.25
 DistCurveEditor.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2017.07.12-05.20.36
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [DetailCategories]
 WorldSettings.World=True
@@ -912,15 +914,49 @@ ParticleModuleLifetime.Lifetime=True
 ParticleModuleLifetime.Cascade=True
 ParticleModuleLight.Light=True
 ParticleModuleLight.Cascade=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Lightmass=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Rendering=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.ImportSettings=True
+StaticMesh.Collision=True
+StaticMesh.Transform=True
+StaticMesh.Miscellaneous=True
+StaticMesh.Thumbnail=True
+StaticMesh.Navigation=True
+BlockingVolume.TransformCommon=True
+BlockingVolume.Tags=True
+BlockingVolume.Collision=True
+BlockingVolume.Cooking=True
+BlockingVolume.BrushSettings=True
+BlockingVolume.Actor=True
+TriggerVolume.TransformCommon=True
+TriggerVolume.Tags=True
+TriggerVolume.Collision=True
+TriggerVolume.Cooking=True
+TriggerVolume.BrushSettings=True
+TriggerVolume.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/StarterContent/Particles/P_Fire.P_Fire
+OpenAssetsAtExit=/Game/StarterContent/Props/SM_Door.SM_Door
 
 [RootWindow]
 ScreenPosition=X=53.000 Y=11.000
-WindowSize=X=1792.000 Y=1026.000
-InitiallyMaximized=False
+WindowSize=X=1802.000 Y=1036.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -976,7 +1012,7 @@ MRUItem0=/Game/Maps/NewMap
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
+Object="\"Object.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -986,8 +1022,12 @@ ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifet
 ParticleModule="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
 ParticleModuleLight="\"Object.Light.ColorScaleOverLife.Distribution\" \"Object.Light.BrightnessOverLife\" \"Object.Light.BrightnessOverLife.Distribution\" \"Object.Light.RadiusScale.Distribution\" \"Object.Light.LightExponent.Distribution\" "
 ParticleModuleLightBase="\"Object.Light.ColorScaleOverLife.Distribution\" \"Object.Light.BrightnessOverLife\" \"Object.Light.BrightnessOverLife.Distribution\" \"Object.Light.RadiusScale.Distribution\" \"Object.Light.LightExponent.Distribution\" "
+BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+StaticMesh="\"Object.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Props/SM_GlassWindow.SM_GlassWindow;
+RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_4
 RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
 RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_Old.M_Brick_Clay_Old;
