--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,7 +74,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Maps/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2017.07.23-05.41.29
+BuildingEscape.TimeStamp=2017.08.16-20.31.27
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2017.07.12-05.20.31
 PakFile.LastCompileMethod=Unknown
@@ -951,11 +951,10 @@ TriggerVolume.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/StarterContent/Props/SM_Door.SM_Door
 
 [RootWindow]
 ScreenPosition=X=53.000 Y=11.000
-WindowSize=X=1802.000 Y=1036.000
+WindowSize=X=1822.000 Y=1048.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -982,7 +981,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Classes_Game/BuildingEscape
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
