--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,7 +74,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Maps/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2017.08.16-20.31.27
+BuildingEscape.TimeStamp=2017.08.16-22.11.17
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2017.07.12-05.20.31
 PakFile.LastCompileMethod=Unknown
@@ -948,13 +948,24 @@ TriggerVolume.Collision=True
 TriggerVolume.Cooking=True
 TriggerVolume.BrushSettings=True
 TriggerVolume.Actor=True
+SpotLight.TransformCommon=True
+SpotLight.Light=True
+SpotLight.Light Profiles=True
+SpotLight.Lightmass=True
+SpotLight.Performance=True
+SpotLight.LightFunction=True
+SpotLight.DistanceFieldShadows=True
+SpotLight.Rendering=True
+SpotLight.Tags=True
+SpotLight.Cooking=True
+SpotLight.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=53.000 Y=11.000
-WindowSize=X=1822.000 Y=1048.000
+WindowSize=X=1832.000 Y=1048.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1011,7 +1022,7 @@ MRUItem0=/Game/Maps/NewMap
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
+Object=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 TriggerVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1025,6 +1036,7 @@ BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/StarterContent/Props/SM_GlassWindow.SM_GlassWindow;
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_4
 RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
