--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -959,9 +959,32 @@ SpotLight.Rendering=True
 SpotLight.Tags=True
 SpotLight.Cooking=True
 SpotLight.Actor=True
+DefaultPawn_Blueprint_C.TransformCommon=True
+DefaultPawn_Blueprint_C.StaticMesh=True
+DefaultPawn_Blueprint_C.Materials=True
+DefaultPawn_Blueprint_C.Pawn=True
+DefaultPawn_Blueprint_C.FloatingPawnMovement=True
+DefaultPawn_Blueprint_C.NavMovement=True
+DefaultPawn_Blueprint_C.Physics=True
+DefaultPawn_Blueprint_C.Velocity=True
+DefaultPawn_Blueprint_C.PlanarMovement=True
+DefaultPawn_Blueprint_C.Collision=True
+DefaultPawn_Blueprint_C.Lighting=True
+DefaultPawn_Blueprint_C.MovementComponent=True
+DefaultPawn_Blueprint_C.Tags=True
+DefaultPawn_Blueprint_C.Rendering=True
+DefaultPawn_Blueprint_C.Activation=True
+DefaultPawn_Blueprint_C.Cooking=True
+DefaultPawn_Blueprint_C.Shape=True
+DefaultPawn_Blueprint_C.Navigation=True
+DefaultPawn_Blueprint_C.Camera=True
+DefaultPawn_Blueprint_C.Input=True
+DefaultPawn_Blueprint_C.Actor=True
+DefaultPawn_Blueprint_C.Tick=True
+DefaultPawn_Blueprint_C.Replication=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=53.000 Y=11.000
@@ -1069,6 +1092,7 @@ StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Renderi
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Materials/M_Ground_Moss.M_Ground_Moss=0
 /Game/StarterContent/Props/Materials/M_Chair.M_Chair=0
+/Game/DefaultPawn_Blueprint.DefaultPawn_Blueprint=0
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
