--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -37,7 +37,7 @@ bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=1
+PlayNumberOfClients=2
 ClientWindowWidth=640
 AutoConnectToServer=True
 RouteGamepadToSecondWindow=False
@@ -49,6 +49,9 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-VKP5MD0
 LastExecutedLaunchName=DESKTOP-VKP5MD0
+MultipleInstancePositions=(X=0,Y=0)
+MultipleInstancePositions=(X=-842150451,Y=-842150451)
+MultipleInstancePositions=(X=801,Y=149)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -74,7 +77,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Maps/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2017.08.18-19.42.43
+BuildingEscape.TimeStamp=2017.08.18-19.54.28
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2017.07.12-05.20.31
 PakFile.LastCompileMethod=Unknown
