--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -37,7 +37,7 @@ bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=2
+PlayNumberOfClients=1
 ClientWindowWidth=640
 AutoConnectToServer=True
 RouteGamepadToSecondWindow=False
@@ -47,8 +47,8 @@ AdditionalServerGameOptions=
 AdditionalLaunchOptions=
 MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
-LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-VKP5MD0
-LastExecutedLaunchName=DESKTOP-VKP5MD0
+LastExecutedLaunchDevice=HTML5@C:/Program Files (x86)/Google/Chrome/Application/chrome.exe
+LastExecutedLaunchName=Chrome
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=-842150451,Y=-842150451)
 MultipleInstancePositions=(X=801,Y=149)
@@ -77,7 +77,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Maps/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2017.08.18-19.54.28
+BuildingEscape.TimeStamp=2017.08.18-20.34.45
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2017.07.12-05.20.31
 PakFile.LastCompileMethod=Unknown
@@ -992,11 +992,14 @@ MyBuildingEscapeGameModeBase_BP_C.GameMode=True
 DefaultPawn_Blueprint_C.ComponentTick=True
 DefaultPawn_Blueprint_C.ComponentReplication=True
 DefaultPawn_Blueprint_C.Variable=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.LodSettings=True
+FbxImportUI.Material=True
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/MyBuildingEscapeGameModeBase_BP.MyBuildingEscapeGameModeBase_BP
-OpenAssetsAtExit=/Game/DefaultPawn_Blueprint.DefaultPawn_Blueprint
 
 [RootWindow]
 ScreenPosition=X=53.000 Y=11.000
@@ -1068,9 +1071,13 @@ ParticleModule="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribu
 ParticleModuleLight="\"Object.Light.ColorScaleOverLife.Distribution\" \"Object.Light.BrightnessOverLife\" \"Object.Light.BrightnessOverLife.Distribution\" \"Object.Light.RadiusScale.Distribution\" \"Object.Light.LightExponent.Distribution\" "
 ParticleModuleLightBase="\"Object.Light.ColorScaleOverLife.Distribution\" \"Object.Light.BrightnessOverLife\" \"Object.Light.BrightnessOverLife.Distribution\" \"Object.Light.RadiusScale.Distribution\" \"Object.Light.LightExponent.Distribution\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-StaticMesh="\"Object.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
+StaticMesh=
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Props/SM_TableRound.SM_TableRound;
+RecentlyPlaced=/Game/furniture/couch/big_Books05.big_Books05;
+RecentlyPlaced=/Game/furniture/couch/big_ChamferBox13.big_ChamferBox13;
+RecentlyPlaced=/Game/furniture/couch/big_Object01.big_Object01;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/StarterContent/Props/SM_GlassWindow.SM_GlassWindow;
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_4
@@ -1087,7 +1094,6 @@ RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x300.Wall_Door_400
 RecentlyPlaced=/Game/StarterContent/Props/SM_Door.SM_Door;
 RecentlyPlaced=/Game/StarterContent/Props/SM_DoorFrame.SM_DoorFrame;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Rock.SM_Rock;
-RecentlyPlaced=/Game/StarterContent/Props/SM_Chair.SM_Chair;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1203,5 +1209,78 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [CascadeEditor]
 LightDir=P=-44.999969 Y=-179.999969 R=0.000000
+
+[/Script/UnrealEd.FbxImportUI]
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+bKeepOverlappingVertices=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+bImportCustomAttribute=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[MessageLog]
+LastLogListing=MapCheck
 
 
