--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,7 +77,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Maps/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2017.08.19-02.09.53
+BuildingEscape.TimeStamp=2017.08.22-19.49.44
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2017.07.12-05.20.31
 PakFile.LastCompileMethod=Unknown
@@ -617,6 +617,14 @@ DistCurveEditor.TimeStamp=2017.07.12-05.20.25
 DistCurveEditor.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2017.07.12-05.20.36
 StaticMeshEditor.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2017.07.12-05.20.28
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+PerfCounters.TimeStamp=2017.07.12-05.20.31
+PerfCounters.LastCompileMethod=Unknown
+BlueprintProfiler.TimeStamp=2017.07.12-05.20.22
+BlueprintProfiler.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2017.07.12-05.20.22
+BlueprintGraph.LastCompileMethod=Unknown
 
 [DetailCategories]
 WorldSettings.World=True
@@ -1000,12 +1008,11 @@ FbxImportUI.Material=True
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/DefaultPawn_Blueprint.DefaultPawn_Blueprint
 
 [RootWindow]
 ScreenPosition=X=53.000 Y=11.000
-WindowSize=X=1832.000 Y=1048.000
-InitiallyMaximized=True
+WindowSize=X=1842.000 Y=1048.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1031,7 +1038,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Classes_Game/BuildingEscape
+ContentBrowserTab1.SelectedPaths=
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
