--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,7 +77,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Maps/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2017.08.22-21.06.42
+BuildingEscape.TimeStamp=2017.08.22-21.24.38
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2017.07.12-05.20.31
 PakFile.LastCompileMethod=Unknown
@@ -1325,5 +1325,13 @@ bConvertSceneUnit=False
 
 [MessageLog]
 LastLogListing=MapCheck
+
+[FoliageEdit]
+WindowPosition=-1,-1,284,400
+bFilterFoliage=False
+bShowPaletteItemDetails=True
+bShowPaletteItemTooltips=True
+ActivePaletteViewMode=0
+PaletteThumbnailScale=0.300000
 
 
