--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,7 +77,7 @@ CurrentPosGridSize=1
 LastLevel=/Game/Maps/NewMap
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2017.08.22-21.24.38
+BuildingEscape.TimeStamp=2017.08.22-22.12.56
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2017.07.12-05.20.31
 PakFile.LastCompileMethod=Unknown
@@ -1027,6 +1027,59 @@ REINST_DefaultPawn_Blueprint_C_35.Replication=True
 REINST_DefaultPawn_Blueprint_C_35.Input=True
 REINST_DefaultPawn_Blueprint_C_35.Actor=True
 AndroidRuntimeSettings.AdvancedBuild=True
+PhysicsHandleComponent.Variable=True
+PhysicsHandleComponent.Sockets=True
+PhysicsHandleComponent.PhysicsHandle=True
+PhysicsHandleComponent.Tags=True
+PhysicsHandleComponent.ComponentReplication=True
+PhysicsHandleComponent.Activation=True
+PhysicsHandleComponent.Cooking=True
+PhysicsHandleComponent.Events=True
+REINST_DefaultPawn_Blueprint_C_40.Variable=True
+REINST_DefaultPawn_Blueprint_C_40.TransformCommon=True
+REINST_DefaultPawn_Blueprint_C_40.Sockets=True
+REINST_DefaultPawn_Blueprint_C_40.Shape=True
+REINST_DefaultPawn_Blueprint_C_40.Navigation=True
+REINST_DefaultPawn_Blueprint_C_40.Rendering=True
+REINST_DefaultPawn_Blueprint_C_40.Physics=True
+REINST_DefaultPawn_Blueprint_C_40.Collision=True
+REINST_DefaultPawn_Blueprint_C_40.Tags=True
+REINST_DefaultPawn_Blueprint_C_40.ComponentReplication=True
+REINST_DefaultPawn_Blueprint_C_40.Cooking=True
+REINST_DefaultPawn_Blueprint_C_40.Events=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
+PointLightComponent.TransformCommon=True
+PointLightComponent.Light=True
+PointLightComponent.Light Profiles=True
+PointLightComponent.Lightmass=True
+PointLightComponent.Performance=True
+PointLightComponent.LightFunction=True
+PointLightComponent.DistanceFieldShadows=True
+PointLightComponent.Rendering=True
+PointLightComponent.Tags=True
+PointLightComponent.Cooking=True
+DirectionalLightComponent.TransformCommon=True
+DirectionalLightComponent.Light=True
+DirectionalLightComponent.LightShafts=True
+DirectionalLightComponent.DistanceFieldShadows=True
+DirectionalLightComponent.CascadedShadowMaps=True
+DirectionalLightComponent.Lightmass=True
+DirectionalLightComponent.Performance=True
+DirectionalLightComponent.LightFunction=True
+DirectionalLightComponent.Rendering=True
+DirectionalLightComponent.Tags=True
+DirectionalLightComponent.Cooking=True
+SpotLightComponent.TransformCommon=True
+SpotLightComponent.Light=True
+SpotLightComponent.Light Profiles=True
+SpotLightComponent.Lightmass=True
+SpotLightComponent.Performance=True
+SpotLightComponent.LightFunction=True
+SpotLightComponent.DistanceFieldShadows=True
+SpotLightComponent.Rendering=True
+SpotLightComponent.Tags=True
+SpotLightComponent.Cooking=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -1069,7 +1122,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.ThumbnailSizeScale=0.600000
 AssetPropertyPicker.CurrentViewType=0
 
 [Directories2]
@@ -1117,12 +1170,13 @@ PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Obje
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/My_Pulse.My_Pulse;
+RecentlyPlaced=/Game/StarterContent/Props/SM_GlassWindow.SM_GlassWindow;
 RecentlyPlaced=/Game/StarterContent/Props/SM_TableRound.SM_TableRound;
 RecentlyPlaced=/Game/furniture/couch/big_Books05.big_Books05;
 RecentlyPlaced=/Game/furniture/couch/big_ChamferBox13.big_ChamferBox13;
 RecentlyPlaced=/Game/furniture/couch/big_Object01.big_Object01;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Game/StarterContent/Props/SM_GlassWindow.SM_GlassWindow;
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_4
 RecentlyPlaced=/Game/StarterContent/Particles/P_Fire.P_Fire;
 RecentlyPlaced=/Script/Engine.TriggerVolume;/Engine/Transient.ActorFactoryBoxVolume_20
@@ -1136,7 +1190,6 @@ RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x300.Wall_400x300;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x300.Wall_Door_400x300;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Door.SM_Door;
 RecentlyPlaced=/Game/StarterContent/Props/SM_DoorFrame.SM_DoorFrame;
-RecentlyPlaced=/Game/StarterContent/Props/SM_Rock.SM_Rock;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1201,21 +1254,24 @@ PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Grab,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,
+DefaultPawn_Blueprint_C=DefaultPawn_Blueprint_C.Physics.ConstraintsGroup,
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Materials/M_Ground_Moss.M_Ground_Moss=0
 /Game/StarterContent/Props/Materials/M_Chair.M_Chair=0
 /Game/DefaultPawn_Blueprint.DefaultPawn_Blueprint=0
 /Game/MyBuildingEscapeGameModeBase_BP.MyBuildingEscapeGameModeBase_BP=0
+/Game/My_Pulse.My_Pulse=1
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
-PrimType=2
+PrimType=3
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.StaticMesh=False
 Emitter.Actor=True
 Emitter.Particles=True
+PointLightComponent.Light=True
 
 [SuppressableDialogs]
 Warning_NoPreviewMeshFound=False
